Acrescentado valor das vendas

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Pagina de vendas</h1>
+    
+    <p>Vendas = R$5.000,00</p>
     <a href="index.html">Ir para a tela inicial</a>
 </body>
 </html>
